# ChaCha20

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  chacha.hpp  chacha20.hpp  conanfile.txt  main.cpp
.github/workflows/: ci.yml
cmake/: ChachaConfig.cmake.in
include/chausner/: chacha.hpp
tests/: CMakeLists.txt
tests/res/: LICENSE  test-vectors-12.csv  test-vectors-20.csv  test-vectors-8.csv
tests/src/: benchmark.cpp  main.cpp  tests.cpp
